# websentry-ai

./: .gitignore  Dockerfile  Dockerfile.api  LICENSE  README.md  pyproject.toml
reports/: report-20251225-094958.html  report-20251225-094958.json  report-20251226-081720.html  report-20251226-081720.json  report.html  report.json
src/websentry/: cli.py  webapp.py
src/websentry/llm/: openai_client.py  summary.py
templates/: report.html.j2
templates/web/: index.html  result.html
