[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "websentry"
version = "0.1.1"
description = "WebSentry - permission-only web app security reviewer"
requires-python = ">=3.10"

dependencies = [
  "playwright>=1.40",
  "typer[all]>=0.9",
  "jinja2>=3.1",
  "fastapi>=0.110",
  "uvicorn>=0.27",
  "python-multipart>=0.0.9"
]

[project.scripts]
websentry = "websentry.cli:app"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
